<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="25dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:elevation="3dp"
                                android:src="@drawable/logo_carre" />


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/about_app_version"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:text="@string/version"

                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/about_version"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginLeft="5dp"
                                    android:gravity="center_vertical"
                                    android:text="@string/app_version"
                                    android:textColor="@color/green"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>


                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/event_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/description"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_description_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/About_us"
                        android:textSize="16sp" />





                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"

                        android:padding="15dp"
                        android:text="@string/mail"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_mail_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/ADDRESS_CONTACT"
                        android:textSize="17sp" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/about_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/phone"

                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/about_phone_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/PHONE"

                        android:textSize="17sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>