<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupSharedPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="adresseLabel,adresseV,sharePosition,addToFavoritePosition,routePosition"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/adresseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/adresse"
        android:textColor="?attr/colorOnBottomSheetSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adresseV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="1dp"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAlignment="center"
        android:textAppearance="?attr/positionTextAppearance"
        android:textColor="@color/pastel_red"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresseLabel"
        tools:text="" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sharePosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_position_friend"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addToFavoritePosition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresseV"
        app:srcCompat="@drawable/ic_partager" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToFavoritePosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_favorite_friend"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/routePosition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sharePosition"
        app:layout_constraintTop_toBottomOf="@+id/adresseV"
        app:srcCompat="@drawable/ic_favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/routePosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/compute_route_friend"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addToFavoritePosition"
        app:layout_constraintTop_toBottomOf="@+id/adresseV"
        app:srcCompat="@drawable/ic_itineraire" />
</merge>