<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/origin_placeholder"
        android:textSize="12sp"
        android:textColor="?attr/colorOnBottomSheetSurfaceVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/origin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/green"
        android:backgroundTint="@color/bottom_sheet_text_input_layout_stroke_color"
        android:textAlignment="center"
        android:textAppearance="?attr/positionTextAppearance"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/destination_placeholder"
        android:textSize="12sp"
        android:textColor="?attr/colorOnBottomSheetSurfaceVariant"
        app:layout_constraintTop_toBottomOf="@+id/origin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textSize="12dp"
        android:backgroundTint="@color/bottom_sheet_text_input_layout_stroke_color"
        android:textColor="@color/green"
        android:textAppearance="?attr/positionTextAppearance"
        android:textAlignment="center"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupRouteSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="origin,textview1,textview2,searchB,destination" />
</androidx.constraintlayout.widget.ConstraintLayout>